--- a/src/wizardCSS/wizard.css
+++ b/src/wizardCSS/wizard.css
@@ -66,29 +66,32 @@ h5{
 	font-style: italic;
 }
 
-.card {
+.mycard {
     background: #88cc8b;
     border: 0 none;
     border-radius: 10px;
     padding: 20px 40px 30px 40px;
     box-sizing: border-box;
-    width: 70%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
     position: relative
 }
 
 .end {
-  background-color: #46a44a;
+  background-color: #47a54b;
   border: none;
   color: white;
-  padding: 12px 10px;
-  border-radius: 5px;
+  padding: 15px 5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 18px;
-  font-weight: bold
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 5px;
+  width: 250px;
+  font-family: Arial, Helvetica, sans-serif
 }
 
 .success {
@@ -98,6 +101,9 @@ h5{
 	}
 .fs-title{
 	font-size: 36px; 
-	color: black;
-	
+	color: black;	
+}
+.fit-image {
+    width: 100%;
+    object-fit: cover;    
 }
